--- a/driver-parking-detail-service/.env
+++ b/driver-parking-detail-service/.env
@@ -1,6 +1,6 @@
-PORT=8002
+PORT=8012
+#DB_HOST=host.docker.internal:5432
 DB_HOST=postgres16:5432
-DB_DATABASE=cursos
+DB_DATABASE=parking-detail
 DB_USERNAME=postgres
 DB_PASSWORD=postgres
-USERS_URL=users:8001
