--- a/driver-parking-detail-service/src/main/resources/application.properties
+++ b/driver-parking-detail-service/src/main/resources/application.properties
@@ -1,8 +1,15 @@
 spring.application.name=driver-parking-detail-service
-server.port=8012
-spring.datasource.url=jdbc:postgresql://localhost:5432/parking-detail
-spring.datasource.username=postgres
-spring.datasource.password=postgres
+#server.port=8012
+server.port=${PORT}
+
+#spring.datasource.url=jdbc:postgresql://localhost:5432/parking-detail
+#spring.datasource.url=jdbc:postgresql://host.docker.internal:5432/parking-detail
+spring.datasource.url=jdbc:postgresql://${DB_HOST}/${DB_DATABASE}
+#spring.datasource.username=postgres
+#spring.datasource.password=postgres
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
+
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database-platform=org.hibernate.dialect.PostgresPlusDialect
 spring.jpa.generate-ddl=true
