--- a/driver-parking-history-service/.env
+++ b/driver-parking-history-service/.env
@@ -1,6 +1,6 @@
-PORT=8002
-DB_HOST=postgres16:5432
-DB_DATABASE=cursos
-DB_USERNAME=postgres
-DB_PASSWORD=postgres
-USERS_URL=users:8001
+PORT=8011
+#DB_HOST=host.docker.internal:3306
+DB_HOST=mysql8:3306
+DB_DATABASE=parking-history
+DB_USERNAME=root
+DB_PASSWORD=root
