--- a/driver-parking-history-service/pom.xml
+++ b/driver-parking-history-service/pom.xml
@@ -6,7 +6,7 @@
 		<groupId>com.parking</groupId>
 		<artifactId>parking-backend-parent</artifactId>
 		<version>1.0-SNAPSHOT</version>
-		<relativePath/> <!-- lookup parent from repository -->
+		<!--relativePath/--> <!-- lookup parent from repository -->
 	</parent>
 	<!--groupId>com.parking</groupId-->
 	<artifactId>driver-parking-history-service</artifactId>
