Adición modulos java, personalización JRE

--- a/driver-parking-history-service/Dockerfile
+++ b/driver-parking-history-service/Dockerfile
@@ -1,11 +1,10 @@
 # Argumento global
 ARG NAME_APP=driver-parking-history-service
 
-# Etapa de construcción
-FROM eclipse-temurin:23-jdk-alpine AS builder
+# Etapa de construcción JAR
+FROM eclipse-temurin:23-jdk-alpine AS jar-builder
 
 ARG NAME_APP
-
 WORKDIR /app/$NAME_APP
 
 # Copiar los archivos de configuración de Maven y construir las dependencias
@@ -18,18 +17,56 @@ RUN  ./mvnw clean package -Dmaven.test.skkp -Dmaven.main.skkp -Dspring-boot.repa
 
 # Copiar el código fuente y construir el paquete
 COPY ./$NAME_APP/src ./src
-RUN  ./mvnw clean package -DskipTests
+RUN  ./mvnw clean package -DskipTests -pl :driver-parking-history-service
 
-# Etapa de ejecución
-FROM eclipse-temurin:23-jre-alpine
+# Etapa de construcción JRE
+FROM eclipse-temurin:23-jdk-alpine AS jlink-builder
 
 ARG NAME_APP
 WORKDIR /app/$NAME_APP
 
-RUN mkdir ./logs
+RUN apk add --no-cache zip
+
+COPY --from=jar-builder /app/$NAME_APP/target/$NAME_APP-0.0.1-SNAPSHOT.jar ./
+
+RUN jar xf ./$NAME_APP-0.0.1-SNAPSHOT.jar && \
+    zip -d ./$NAME_APP-0.0.1-SNAPSHOT.jar "module-info.class"
+    #jar cf0 ./$NAME_APP-0.0.1-SNAPSHOT.jar META-INF/ BOOT-INF/ org/
+
+#jdeps --ignore-missing-deps --class-path "BOOT-INF/lib/" --recursive .\driver-parking-history-service-0.0.1-SNAPSHOT.jar
+RUN jdeps --ignore-missing-deps -q  \
+    --recursive  \
+    --multi-release 23  \
+    --print-module-deps  \
+    --class-path 'BOOT-INF/lib/*'  \
+    ./$NAME_APP-0.0.1-SNAPSHOT.jar > modules.txt
+
+RUN cat modules.txt
+
+RUN jlink \
+    --add-modules $(cat modules.txt) \
+    --strip-debug \
+    --no-man-pages \
+    --no-header-files \
+    --compress=2 \
+    --output /custom-jre
+
+# Etapa de ejecución
+#FROM eclipse-temurin:23-jre-alpine
+FROM alpine:latest
+
+ARG NAME_APP
+WORKDIR /app/$NAME_APP
+
+# Copia JRE personalizado
+COPY --from=jlink-builder /custom-jre /opt/jre
+ENV PATH="/opt/jre/bin:$PATH"
+ENV JAVA_HOME="/opt/jre"
 
 # Copiar el archivo .jar generado en la fase de construcción
-COPY --from=builder /app/$NAME_APP/target/$NAME_APP-0.0.1-SNAPSHOT.jar .
+COPY --from=jar-builder /app/$NAME_APP/target/$NAME_APP-0.0.1-SNAPSHOT.jar .
+
+RUN mkdir ./logs
 
 # Exponer el puerto de la aplicación
 EXPOSE 8011
