--- a/driver-parking-history-service/src/main/resources/application.properties
+++ b/driver-parking-history-service/src/main/resources/application.properties
@@ -1,13 +1,14 @@
 spring.application.name=driver-parking-history-service
-#server.port=8011
-server.port=${PORT}
-#spring.datasource.url=jdbc:mysql://localhost:3306/parking-history
+server.port=8011
+#server.port=${PORT}
+
+spring.datasource.url=jdbc:mysql://localhost:3306/parking-history
 #spring.datasource.url=jdbc:mysql://host.docker.internal:3306/parking-history
-spring.datasource.url=jdbc:mysql://${DB_HOST}/${DB_DATABASE}
-#spring.datasource.username=root
-#spring.datasource.password=root
-spring.datasource.username=${DB_USERNAME}
-spring.datasource.password=${DB_PASSWORD}
+#spring.datasource.url=jdbc:mysql://${DB_HOST}/${DB_DATABASE}
+spring.datasource.username=root
+spring.datasource.password=root
+#spring.datasource.username=${DB_USERNAME}
+#spring.datasource.password=${DB_PASSWORD}
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
