--- a/driver-parking-detail-service/.env
+++ b/driver-parking-detail-service/.env
@@ -1,6 +1,7 @@
 PORT=8012
 #DB_HOST=host.docker.internal:5432
-DB_HOST=postgres16:5432
+#DB_HOST=postgres16:5432
+DB_HOST=h2:9092//opt/h2/data
 DB_DATABASE=parking-detail
-DB_USERNAME=postgres
-DB_PASSWORD=postgres
+DB_USERNAME=sa
+DB_PASSWORD=sa
