--- a/driver-parking-detail-service/src/main/resources/application.properties
+++ b/driver-parking-detail-service/src/main/resources/application.properties
@@ -4,15 +4,25 @@ server.port=${PORT}
 
 #spring.datasource.url=jdbc:postgresql://localhost:5432/parking-detail
 #spring.datasource.url=jdbc:postgresql://host.docker.internal:5432/parking-detail
-spring.datasource.url=jdbc:postgresql://${DB_HOST}/${DB_DATABASE}
+#spring.datasource.url=jdbc:postgresql://${DB_HOST}/${DB_DATABASE}
+#spring.datasource.url=jdbc:h2:tcp://localhost:9092//opt/h2/data/parking-detail
+spring.datasource.url=jdbc:h2:tcp://${DB_HOST}/${DB_DATABASE}
 #spring.datasource.username=postgres
 #spring.datasource.password=postgres
+#spring.datasource.username=sa
+#spring.datasource.password=sa
 spring.datasource.username=${DB_USERNAME}
 spring.datasource.password=${DB_PASSWORD}
 
-spring.datasource.driver-class-name=org.postgresql.Driver
-spring.jpa.database-platform=org.hibernate.dialect.PostgresPlusDialect
+#spring.datasource.driver-class-name=org.postgresql.Driver
+#spring.jpa.database-platform=org.hibernate.dialect.PostgresPlusDialect
+spring.datasource.driver-class-name=org.h2.Driver
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
 spring.jpa.generate-ddl=true
 logging.level.org.hibernate.SQL=debug
-
 spring.jpa.properties.hibernate.jdbc.log.non_contextual_creation=true
+
+# H2 en red
+spring.jpa.properties.hibernate.hbm2ddl.auto=update
+spring.datasource.hikari.connection-test-query=SELECT 1
