--- a/driver-parking-history-service/.env
+++ b/driver-parking-history-service/.env
@@ -1,6 +1,7 @@
 PORT=8011
 #DB_HOST=host.docker.internal:3306
-DB_HOST=mysql8:3306
+#DB_HOST=mysql8:3306
+DB_HOST=h2:9092//opt/h2/data
 DB_DATABASE=parking-history
 DB_USERNAME=root
 DB_PASSWORD=root
