--- a/driver-parking-history-service/src/main/resources/application.properties
+++ b/driver-parking-history-service/src/main/resources/application.properties
@@ -4,13 +4,22 @@ server.port=${PORT}
 
 #pring.datasource.url=jdbc:mysql://localhost:3306/parking-history
 #spring.datasource.url=jdbc:mysql://host.docker.internal:3306/parking-history
+#spring.datasource.url=jdbc:h2:tcp://localhost:9092//opt/h2/data/parking-history
 spring.datasource.url=jdbc:mysql://${DB_HOST}/${DB_DATABASE}
 #spring.datasource.username=root
 #spring.datasource.password=root
 spring.datasource.username=${DB_USERNAME}
 spring.datasource.password=${DB_PASSWORD}
 
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+spring.datasource.driver-class-name=org.h2.Driver
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
 spring.jpa.generate-ddl=true
 logging.level.org.hibernate.SQL=debug
+spring.jpa.properties.hibernate.jdbc.log.non_contextual_creation=true
+
+# H2 en red
+spring.jpa.properties.hibernate.hbm2ddl.auto=update
+spring.datasource.hikari.connection-test-query=SELECT 1
