Creacion preliminar k8s de deployments y services

--- a/Dockerfile_H2
+++ b/Dockerfile_H2
@@ -51,7 +51,7 @@ EXPOSE $H2_TCP_PORT $H2_WEB_PORT
 VOLUME ["/opt/h2/data"]
 
 ENV H2_DATA=/opt/h2/data \
-    H2_PASSWORD=sa \
+    H2_PASSWORD="" \
     H2_DBS=test
 
 # Script creación DB y ejecución h2
