--- a/driver-parking-history-service/src/main/resources/application.properties
+++ b/driver-parking-history-service/src/main/resources/application.properties
@@ -5,7 +5,7 @@ server.port=${PORT}
 #pring.datasource.url=jdbc:mysql://localhost:3306/parking-history
 #spring.datasource.url=jdbc:mysql://host.docker.internal:3306/parking-history
 #spring.datasource.url=jdbc:h2:tcp://localhost:9092//opt/h2/data/parking-history
-spring.datasource.url=jdbc:mysql://${DB_HOST}/${DB_DATABASE}
+spring.datasource.url=jdbc:h2:tcp://${DB_HOST}/${DB_DATABASE}
 #spring.datasource.username=root
 #spring.datasource.password=root
 spring.datasource.username=${DB_USERNAME}
